--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "deploy": "hardhat run --network localhost scripts/deploy.ts",
     "node": "hardhat node",
     "build": "hardhat compile",
-    "test:light": "hardhat test",
-    "test": "hardhat coverage",
+    "test": "hardhat test",
     "lint": "eslint '**/*.{js,ts}' && solhint contracts/**/*.sol && prettier '**/*.{json,sol,md}' --check",
     "lint:fix": "eslint '**/*.{js,ts}' --fix; solhint contracts/**/*.sol --fix; prettier '**/*.{json,sol,md}' --write"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.4.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
@@ -43,7 +43,6 @@
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
     "typescript": "^4.5.2"
